add opponent round replay
make state of all rounds available through round executor
instead of just the current state of the lobby

use default Paima setup for random seeds
