# api/src/controllers/lobbyState.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, Get, Path, Post, Query, Route, SuccessResponse } from 'tsoa';
+import { Controller, Get, Query, Route } from 'tsoa';
 import { getLobbyById, getRoundData, requirePool } from '@dice/db';
 import type { LobbyStateQuery } from '@dice/utils';
+import { getBlockHeight } from 'paima-sdk/paima-db';
 
 interface Response {
   lobby: LobbyStateQuery | null;
@@ -18,10 +19,24 @@ export class LobbyStatecontroller extends Controller {
         { lobby_id: lobbyID, round_number: lobby.current_round },
         pool
       );
+
+      // null if this is first round
+      const [last_round_data] = await getRoundData.run(
+        { lobby_id: lobbyID, round_number: lobby.current_round - 1 },
+        pool
+      );
+
+      const [last_block_height] =
+        last_round_data == null
+          ? [undefined]
+          : await getBlockHeight.run({ block_height: last_round_data.starting_block_height }, pool);
+      const round_seed = last_block_height?.seed ?? lobby.initial_random_seed;
+
       return {
         lobby: {
           ...lobby,
           round_start_height: round_data?.starting_block_height || 0,
+          round_seed,
         },
       };
     }
