# api/src/tsoa/routes.ts
@@ -44,17 +44,20 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
             "player_two": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
             "round_length": {"dataType":"double","required":true},
             "round_start_height": {"dataType":"double","required":true},
+            "round_seed": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -88,13 +91,15 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "round_length": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
@@ -115,14 +120,16 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
             "player_two": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "practice": {"dataType":"boolean","required":true},
             "round_length": {"dataType":"double","required":true},
         },
@@ -144,13 +151,15 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "round_length": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
@@ -171,13 +180,15 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "round_length": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
@@ -190,13 +201,15 @@ const models: TsoaRoute.Models = {
             "creation_block_height": {"dataType":"double","required":true},
             "current_round": {"dataType":"double","required":true},
             "hidden": {"dataType":"boolean","required":true},
-            "latest_match_state": {"dataType":"string","required":true},
+            "initial_random_seed": {"dataType":"string","required":true},
             "lobby_creator": {"dataType":"string","required":true},
             "lobby_id": {"dataType":"string","required":true},
             "lobby_state": {"ref":"lobby_status","required":true},
             "num_of_rounds": {"dataType":"double","required":true},
             "play_time_per_player": {"dataType":"double","required":true},
             "player_one_iswhite": {"dataType":"boolean","required":true},
+            "player_one_points": {"dataType":"double","required":true},
+            "player_two_points": {"dataType":"double","required":true},
             "round_length": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
